<resources>
    <string name="app_name">ShowToast</string>
    <string name="chocolate_syrup">Chocolate syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="cherries">Cherries</string>
    <string name="oreo_cookies_crumbles">Oreo cookies crumbles</string>
    <string name="show_toast">Show Toast</string>
</resources>
